--- a/src/theme/ion-overrides.sass
+++ b/src/theme/ion-overrides.sass
@@ -7,3 +7,11 @@ div
     --background: var(--ion-background-color)
   ion-content 
     --background: var(--ion-background-color)
+
+ion-button 
+  &.white
+    font-weight: normal
+    box-shadow: none
+    --background: var(--ion-background-color)
+    --background-activated: var(--ion-background-color)
+    color: var(--ion-color-primary)
