feat(icon): allow task card image icon

--- a/src/components/task-card/index.sass
+++ b/src/components/task-card/index.sass
@@ -12,3 +12,16 @@
 
 
 
+.task-box
+    background-color: #F0F0F0
+    height: 60px
+    width: 70px
+    padding-top: 15px
+    border-radius: 14px
+
+.task-image
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    vertical-align: middle
