Render product modal y problem modal

--- a/src/pages/tasks/merchandise-reception-task/components/product/product-list/index.sass
+++ b/src/pages/tasks/merchandise-reception-task/components/product/product-list/index.sass
@@ -1,1 +1,110 @@
 @import ../../../../../../theme/ui-rules.sass
+
+.modal
+  padding-top: 134px
+
+.modal-container
+  display: flex
+  flex-direction: column
+  border-radius: 24px 24px 0px 0px
+
+.modal-close-button
+  margin: 0
+  color: black
+  font-weight: 600
+  font-size: 22px
+  text-align: end
+  padding: 32px 32px 0px 32px
+
+.modal-circle-container
+  display: flex
+  justify-content: center  
+
+.modal-circle
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  border: 4px solid red
+  // border-image-source: linear-gradient(79.78deg, #32E0A1 20.82%, #F0FE0A 89.45%)
+  width: 190px
+  height: 190px
+
+.modal-circle-text-1
+  font-size: 20px
+  font-weight: 600
+  line-height: 20px
+  letter-spacing: -0.05em
+  color: #000000
+  margin: 0
+
+.modal-circle-text-2
+  font-size: 40px
+  font-weight: bold
+  line-height: 40px
+  letter-spacing: -0.05em
+  color: #000000
+  margin: 0
+
+.modal-circle-text-3
+  font-size: 16px
+  font-weight: 600
+  line-height: 30px
+  letter-spacing: -0.05em
+  color: rgba(0, 0, 0, 0.6)
+  margin: 0
+
+.modal-product-card
+  padding: 0px 32px
+
+.modal-title
+  margin: 0
+  font-style: normal
+  font-weight: bold
+  font-size: 24px
+  line-height: 24px
+  letter-spacing: -0.05em
+  color: #000000
+  padding: 0px 32px 32px 32px
+
+.product-problem-link
+  margin: 0
+  font-style: normal
+  font-weight: bold
+  font-size: 16px
+  text-align: center
+  line-height: 16px
+  letter-spacing: -0.05em
+  color: #000000
+  padding: 0px 32px
+
+.modal-textarea
+  background-color: #F0F0F0
+  border-radius: 24px
+  height: 140px
+  padding: 32px
+
+.modal-button-container
+  display: flex
+  flex-direction: column
+  padding: 16px
+
+.modal-button
+  box-sizing: border-box
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+  padding: 16px
+  gap: 10px
+  // width: 311px
+  height: 48px
+  background: #FFFFFF
+  border-radius: 60px
+  color: #000000
+  font-weight: bold
+  border-image-source: linear-gradient(79.78deg, #32E0A1 20.82%, #F0FE0A 89.45%)
+  border: 2px solid
+  margin: 5px
+
