feat(header): updated task header
* changed size title
* added subtitle in case is necesary

--- a/src/pages/tasks/found-rate/components/TaskHeader/index.sass
+++ b/src/pages/tasks/found-rate/components/TaskHeader/index.sass
@@ -3,3 +3,20 @@
 
 .header-md::after
     height: 0
+
+.task-header-title
+    margin: 0
+    white-space: 'pre-line'
+    font-style: normal
+    font-weight: 700
+    font-size: 28px
+    line-height: 28px
+    letter-spacing: -0.05em
+
+.task-header-subtitle
+    font-style: normal
+    font-weight: 600
+    font-size: 16px
+    line-height: 16px
+    letter-spacing: -0.05em
+    color: rgba(0, 0, 0, 0.6)
