--- a/src/components/accordion-option/index.sass
+++ b/src/components/accordion-option/index.sass
@@ -1,6 +1,7 @@
 .task-accordion
   margin-top: 16px
-  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.08)
+  border: 1px solid #F0F0F0
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08)
   border-radius: 24px
   width: auto
 
