--- a/src/pages/tasks/found-rate/components/TaskHeader/index.sass
+++ b/src/pages/tasks/found-rate/components/TaskHeader/index.sass
@@ -9,14 +9,6 @@
     white-space: 'pre-line'
     font-style: normal
     font-weight: 700
-    font-size: 28px
-    line-height: 28px
+    font-size: 24px
+    line-height: 100%
     letter-spacing: -0.05em
-
-.task-header-subtitle
-    font-style: normal
-    font-weight: 600
-    font-size: 16px
-    line-height: 16px
-    letter-spacing: -0.05em
-    color: rgba(0, 0, 0, 0.6)
