style(mockup): aligning to figma mockup

--- a/src/components/accordion-option/index.sass
+++ b/src/components/accordion-option/index.sass
@@ -12,3 +12,10 @@ ion-item[slot="header"]
 ion-accordion.accordion-animated > [slot=header] .ion-accordion-toggle-icon
   color: rgba(0, 0, 0, 0.3)
   font-size: 20px
+
+.accordion-title
+  font-style: normal
+  font-weight: 700
+  font-size: 16px
+  line-height: 100%
+  letter-spacing: -0.05em
