--- a/src/components/accordion-option/index.sass
+++ b/src/components/accordion-option/index.sass
@@ -6,8 +6,8 @@
   width: auto
 
 ion-item[slot="header"]
-  margin: 8px 0px
-  height: 48px
+  padding: 10px 0px
+  height: 72px
 
 ion-accordion.accordion-animated > [slot=header] .ion-accordion-toggle-icon
   color: rgba(0, 0, 0, 0.3)
