--- a/src/components/task-card/index.sass
+++ b/src/components/task-card/index.sass
@@ -1,22 +1,21 @@
 .task-card
     margin-top: 16px
-    box-shadow: 0px 0px 24px rgb(0 0 0 / 8%)
+    background: #FFFFFF
+    border: 1px solid #F0F0F0
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08)
     border-radius: 24px
-
-    ion-img::part(image)
-        width: auto    
-           
-.task-card::part(native)
-    margin: 8px 0px
     height: 80px
+    ion-img::part(image)
+        width: auto
 
-
+.task-card::part(native)
+    height: 80px
 
 .task-box
     background-color: #F0F0F0
-    height: 60px
-    width: 70px
-    padding-top: 15px
+    height: 50px
+    width: 50px
+    padding-top: 10px
     border-radius: 14px
 
 .task-image
@@ -25,3 +24,11 @@
     align-items: center
     justify-content: center
     vertical-align: middle
+
+.task-card-title
+    font-style: normal
+    font-weight: 700
+    font-size: 16px
+    line-height: 100%
+    letter-spacing: -0.05em
+    margin-left: 10px
