style(header): updating task header style

--- a/src/pages/tasks/found-rate/components/TaskHeader/index.sass
+++ b/src/pages/tasks/found-rate/components/TaskHeader/index.sass
@@ -1,5 +1,6 @@
 .task-header
-    border-bottom: 8px solid #F0F0F0
+    box-sizing: border-box
+    border-bottom: 1px solid #F0F0F0
 
 .header-md::after
     height: 0
