feat(design): design product detail

--- a/src/components/chip/index.sass
+++ b/src/components/chip/index.sass
@@ -4,6 +4,10 @@
   background: #000000
   border-radius: 20px
 
+.chip-container
+  display: flex
+  flex: 1
+
 .ion-label
   color: #FFFFFF
   font-family: Open Sans
