--- a/src/pages/tasks/found-rate/views/productDetail/index.sass
+++ b/src/pages/tasks/found-rate/views/productDetail/index.sass
@@ -1,3 +1,9 @@
+%product-detail--text
+  font-family: Open Sans
+  font-style: normal
+  line-height: 100%
+  letter-spacing: -0.05em
+
 .color--light
   color: #FFFFFF
 
@@ -29,16 +35,19 @@
 .product-detail--container
   margin: 24px
 
-.product-detail--card
-  background-color: #000000
-  padding: 16px 24px
-  border-radius: 24px
-
 .product-detail--title
   @extend %product-detail--text
-  font-size: 14px
+  font-size: 16px
   font-weight: 600
-  color: #333333
+  color: #000000
+  width: 80px
+  margin-bottom: 4px
+
+.product-detail--card
+  background-color: #000000
+  padding: 1px 24px
+  margin: 24px 0px
+  border-radius: 24px
 
 .product-detail--description
   @extend %product-detail--text
@@ -46,38 +55,49 @@
   font-weight: 700
   color: #000000
 
-.flex-row
-  display: flex
-  flex: 1
-  flex-direction: row
-
-.flex-column
-  display: flex
-  flex: 1
-  flex-direction: column
-
-.flex--align-items__center
-  display: flex
-  flex-direction: row
-  flex: 1
-  align-items: center
-
-.cross
-  margin: 0px
-
 .product-detail--rack-question
-  @extend .flex--align-items__center
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  align-items: center
   border: 1px solid #F0F0F0
   border-radius: 24px
-  width: 327px
-  height: 72px
+  padding: 16px 24px
+  margin: 40px 0px
 
-  .product-container
+.product-detail--rack-question__text
+  @extend %product-detail--text
+  font-size: 16px
+  font-weight: 700
+  color: #000000
+  width: 55%
+
+.product-detail--icons
+  display: flex
+  flex-direction: row
+
+.product-container
   padding: 5px
 
-.product-detail-tag
+.product-detail--tag-title
   @extend %product-detail--text
   font-size: 14px
+  font-weight: 600
+  color: #666666
+  margin-bottom: 4px
+  margin-right: 4px
 
-.product-detail--padding
-  padding: 24px
+.product-detail--tag-description
+  @extend %product-detail--text
+  font-size: 16px
+  font-weight: 600
+  color: #000000
+
+.divider
+  height: 1px
+  background: #F0F0F0
+  width: 100%
+  margin: 8px 0px
+
+.font-weight--700
+  font-weight: 700
