refactor(component): using data from data instead category

--- a/src/pages/tasks/found-rate/components/product/index.sass
+++ b/src/pages/tasks/found-rate/components/product/index.sass
@@ -3,7 +3,7 @@
     border-top: 1px solid #F0F0F0
     width: 100%
     ion-thumbnail
-      --size: 90px
+      --size: 80px
       --border-radius: 14px
       border: 1.5px solid #EEEEEE
       padding: 5px
@@ -13,6 +13,9 @@
 
   span
     margin-top: 5px
+
+  .product-detail
+    margin-left: 10px
 
   .product-chip
     // Badge
