--- a/src/pages/tasks/found-rate/views/productDetail/index.sass
+++ b/src/pages/tasks/found-rate/views/productDetail/index.sass
@@ -156,3 +156,17 @@
   background-color: #F0F0F0
   margin: 0px 10px
 
+.product-detail--location
+   border: 2px solid #F0F0F0
+   border-radius: 8px
+   padding: 8px 
+
+.product-detail--header
+  align-items: center
+
+.product-image-container
+  border: 2px solid #F0F0F0
+  border-radius: 12px
+  padding: 8px
+
+.product-image
