style(product-detail): fix style in dropdown

--- a/src/pages/tasks/found-rate/components/dropdown/index.sass
+++ b/src/pages/tasks/found-rate/components/dropdown/index.sass
@@ -3,6 +3,7 @@
   flex-direction: row
   justify-content: space-around
   align-items: center
+  margin-top: 22px
 
 .dropdown--arrow
   min-width: 50px
