--- a/src/pages/root-home/index.sass
+++ b/src/pages/root-home/index.sass
@@ -125,8 +125,8 @@
 
     ion-content
       --background: transparent
-      --padding-start: 16px
-      --padding-end: 16px
+      --padding-start: 8px
+      --padding-end: 8px
       background-repeat: no-repeat
       background-position: center calc(100% + 50px)
       background-color: var(--ion-background-color)
@@ -160,67 +160,10 @@
           flex-direction: row
           align-items: flex-start
           justify-content: center
-      div.progress-bar
-        background-color: var(--ion-color-primary)
-        width: 100%
-        border-radius: 24px
-        display: flex
-        padding: 18px 24px
-        margin-bottom: 24px
-        >div
-          .progress-text p
-            margin-bottom: 0
-          color: rgba(255, 255, 255, 0.6)
-          // Text
-          &:nth-child(1)
-            width: calc(100% - 80px)
-            >div
-              &:nth-child(1) 
-                font-size: 24px
-                font-weight: bold
-                line-height: 1
-                letter-spacing: -1.2px
-                text-align: left
-                color: var(--ion-color-primary-contrast)
-                padding-bottom: 4px
-              &:nth-child(2)
-                font-size: 14px
-                font-weight: 600
-                font-stretch: normal
-                font-style: normal
-                line-height: 1
-                letter-spacing: -0.8px
-                text-align: left
-                display: flex
-                align-items: center
-                >span
-                  font-size: 32px
-                  margin-right: 10px
-          &:nth-child(2)
-            display: flex
-            align-items: center
-            position: relative
-            >div
-              // Progress Circle indicador
-              &:nth-child(1)
-                display: flex
-                justify-content: center
-                text-align: center
-                position: absolute
-                top: -80px
-                width: 80px !important
-                height: 80px !important
-                margin: 0 auto
-                -webkit-user-select: none
-                user-select: none
-              // Percent Label
-              &:nth-child(2)
-                position: absolute
-                color: var(--ion-color-primary-contrast)
-                font-size: 16px
-                font-weight: bold
-                padding-left: 4px
-                width: 100%
+      hr
+        height: 4px
+        margin: 16px 20px
+        background-color: var(--ion-color-secondary-contrast)
 ion-footer 
   display: flex
   max-width: $grid*85
