feat(subCategories): change subcategories design

--- a/src/pages/tasks/found-rate/components/sub-categories/index.sass
+++ b/src/pages/tasks/found-rate/components/sub-categories/index.sass
@@ -1,11 +1,11 @@
 .sub-category-footer
-  border-top: 1px solid #F0F0F0
+  border-top: 1px solid var(--ion-color-secondary-contrast)
   font-style: normal
   font-weight: 600
   font-size: 14px
   line-height: 100%
   letter-spacing: -0.05em
-  height: 50px
+  height: 40px
   color: #666666
   display: flex
   align-items: center
