--- a/src/pages/tasks/found-rate/components/task-header/index.sass
+++ b/src/pages/tasks/found-rate/components/task-header/index.sass
@@ -13,3 +13,6 @@
     font-size: 24px
     line-height: 100%
     letter-spacing: -0.05em
+ion-chip
+    --background: var(--ion-color-primary)
+    margin-right: 16px !important
