--- a/src/pages/tasks/found-rate/views/product-detail/index.sass
+++ b/src/pages/tasks/found-rate/views/product-detail/index.sass
@@ -22,16 +22,35 @@
   @extend %product-detail--text
   font-size: 16px
 
-.product-detail--container
-  margin: 24px
-
-.product-detail--title
-  @extend %product-detail--text
-  font-size: 16px
-  font-weight: 700
-  color: #000000
-  width: 80px
-  margin-bottom: 4px
+ion-grid.product-detail-grid
+  padding: 0
+  ion-col.product-detail-thumbnail
+    isplay: flex
+    align-items: center
+    padding: 0 12px 0 0
+    ion-thumbnail
+      --size: 80px
+      --border-radius: 14px
+      border: 1.5px solid var(--ion-color-secondary-contrast)
+      padding: 5px
+  ion-col.product-detail-descriptions
+    display: grid
+    align-items: center
+    ion-row
+      h6
+        margin: 0
+        font-weight: 700
+      p
+        margin: 0 4px 0 0
+        color: var(--ion-color-medium-tint)
+  ion-row.product-detail-location
+    p
+      width: 100%
+      margin: 12px 0 16px 0
+      text-align: center
+      padding: 10px 0
+      border: 1px solid var(--ion-color-secondary-contrast)
+      border-radius: 8px
 
 .product-detail--card
   background-color: #000000
@@ -58,16 +77,3 @@
   background: #F0F0F0
   width: 100%
   margin: 8px 0px
-
-.product-detail--location
-  border: 2px solid #F0F0F0
-  border-radius: 8px
-  padding: 8px
-
-.product-detail--header
-  align-items: center
-
-.product-image-container
-  border: 2px solid #F0F0F0
-  border-radius: 12px
-  padding: 8px
