--- a/src/pages/news/views/detailNew/index.sass
+++ b/src/pages/news/views/detailNew/index.sass
@@ -7,14 +7,15 @@
 
 .detail-new-flex
   padding: 20px
+  background: #ffffff
 
 .detail-new-page
   justify-content: unset
   
 .detail-new-title
   @extend %detail-new-text
-  font-weight: 700
-  font-size: 24px
+  font-weight: bold
+  font-size: 30px
   color: #000000
   margin-bottom: 14px
 
@@ -22,25 +23,39 @@
   @extend %detail-new-text
   font-weight: 700
   font-size: 14px
-  color: orange
-//   margin-bottom: 14px
+  color: #000000
+
+.detail-new-description-title
+  @extend %detail-new-text
+  font-weight: 700
+  font-size: 18px
+  color: #000000
+  margin-bottom: 14px
 
 .detail-new-description
   @extend %detail-new-text
   font-weight: 500
-  font-size: 14px
+  font-size: 16px
   color: #141313
-  margin-bottom: 14px
+  margin-bottom: 24px
 
-.detail-new-content
+.detail-new-flex
   padding: 24px
   display: flex
+  flex: 1
   flex-direction: column
+  overflow: scroll
 
+.detail-new-content
+  display: flex
+  flex: 1
+  flex-direction: column
+//   justify-content: space-between
+ 
 .detail-new-files-content
-    margin: 14px 0px
+    margin: 36px 0px
     display: flex
-    flex-wrap: nowrap
+    flex-wrap: wrap
 
 .detail-new-no-image
     background-color: #eeeeee
@@ -50,3 +65,28 @@
     height: 200px
     border-radius: 16px
     margin-bottom: 24px
+
+.detail-new-image
+    width: 100%
+    height: 100%
+    border-radius: 16px
+    object-fit: contain
+    margin-bottom: 24px
+
+.detail-new-files-button
+    box-shadow: 0px 2px 13px #bbbbc5
+    width: fit-content
+    border-radius: 16px
+
+.detail-new-no-image-download
+    height: 18px
+
+.detail-new-no-image-found
+    height: 36px
+
+.detail-new-files-text
+    @extend %detail-new-text
+    font-size: 14px
+    font-weight: 600
+    color: #000000
+    margin-left: 8px
