fix(communications): fixed routes and mockup data

--- a/src/components/communication-card/index.sass
+++ b/src/components/communication-card/index.sass
@@ -1,4 +1,4 @@
-.task-card
+.communication-card
     margin-top: 16px
     background: #FFFFFF
     border: 1px solid #F0F0F0
@@ -8,24 +8,24 @@
     ion-img::part(image)
         width: auto
 
-.task-card::part(native)
+.communication-card::part(native)
     height: 80px
 
-.task-box
+.communication-box
     background-color: #F0F0F0
     height: 50px
     width: 50px
     padding-top: 10px
     border-radius: 14px
 
-.task-image
+.communication-image
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
     vertical-align: middle
 
-.task-card-title
+.communication-card-title
     font-style: normal
     font-weight: 700
     font-size: 16px
