--- a/src/pages/news/views/detailNew/index.sass
+++ b/src/pages/news/views/detailNew/index.sass
@@ -72,6 +72,7 @@
     border-radius: 16px
     object-fit: contain
     margin-bottom: 24px
+    border-radius: 16px
 
 .detail-new-files-button
     box-shadow: 0px 2px 13px #bbbbc5
