style(subcategories): change subcategories page styles

--- a/src/pages/tasks/found-rate/components/sub-categories/index.sass
+++ b/src/pages/tasks/found-rate/components/sub-categories/index.sass
@@ -3,10 +3,12 @@
   font-style: normal
   font-weight: 600
   font-size: 14px
-  line-height: 100%
   letter-spacing: -0.05em
   height: 40px
-  color: #666666
+  color: var(--ion-color-medium-shade)
   display: flex
   align-items: center
   justify-content: center
+  span
+    margin-left: 5px
+
