--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -75,8 +75,8 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-medium-rgb: 146, 148, 156;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
+  --ion-color-medium-shade: #666666;
+  --ion-color-medium-tint: #909090;
 
   /** light **/
   --ion-color-light: #f4f5f8;
