--- a/src/pages/tasks/found-rate/components/product/index.sass
+++ b/src/pages/tasks/found-rate/components/product/index.sass
@@ -20,6 +20,12 @@ ion-grid.product-container
     p
       margin: 0 4px 0 0
       color: var(--ion-color-medium-tint)
+      font-weight: 600
+    span
+      color: var(--ion-color-medium-shade)
+      font-weight: 700
   ion-chip
     --background: var(--ion-color-primary)
     margin: 18px 25px
+    color: var(--ion-color-primary-contrast)
+    font-weight: 600
