style(productDetail): chage styles in product detail page

--- a/src/pages/tasks/found-rate/components/task-header/index.sass
+++ b/src/pages/tasks/found-rate/components/task-header/index.sass
@@ -16,3 +16,5 @@
 ion-chip
     --background: var(--ion-color-primary)
     margin-right: 16px !important
+    color: var(--ion-color-primary-contrast)
+    font-weight: 600
