feat(module-news): fix errors

--- a/src/components/communication-card/index.sass
+++ b/src/components/communication-card/index.sass
@@ -1,4 +1,4 @@
-.communication-card
+.communication-category-card
     margin-top: 16px
     background: #FFFFFF
     border: 1px solid #F0F0F0
@@ -6,26 +6,26 @@
     border-radius: 24px
     height: 80px
     ion-img::part(image)
-        width: auto
+    width: auto
 
-.communication-card::part(native)
+.communication-category-card::part(native)
     height: 80px
 
-.communication-box
+.communication-category-box
     background-color: #F0F0F0
     height: 50px
     width: 50px
     padding-top: 10px
     border-radius: 14px
 
-.communication-image
+.communication-category-image
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
     vertical-align: middle
 
-.communication-card-title
+.communication-category-card-title
     font-style: normal
     font-weight: 700
     font-size: 16px
