--- a/src/pages/news/views/news/index.sass
+++ b/src/pages/news/views/news/index.sass
@@ -47,4 +47,8 @@
   filter: opacity(0.6)
 
 .communication-display-unread
+  @extend %communication-text
+  font-weight: 700
+  font-size: 16px
   color: #000000
+  margin: 0px 6px
