style(productDetail): change styles in radio buttons and font weight

--- a/src/pages/tasks/found-rate/views/product-detail/index.sass
+++ b/src/pages/tasks/found-rate/views/product-detail/index.sass
@@ -17,10 +17,12 @@
 .product-detail--text-sm
   @extend %product-detail--text
   font-size: 12px
+  font-weight: 600
 
 .product-detail--text-bg
   @extend %product-detail--text
   font-size: 16px
+  font-weight: 700
 
 ion-grid.product-detail-grid
   padding: 0
