--- a/src/pages/news/views/detailNew/index.sass
+++ b/src/pages/news/views/detailNew/index.sass
@@ -70,9 +70,8 @@
     width: 100%
     height: 100%
     border-radius: 16px
-    object-fit: contain
+    object-fit: cover
     margin-bottom: 24px
-    border-radius: 16px
 
 .detail-new-files-button
     box-shadow: 0px 2px 13px #bbbbc5
